force-app/main/default/objects/Freight__c/Freight__c.object-meta.xml
<CustomObject>
    <description>Object intended for freight registration</description>
    <label>Freight Table</label>
    <nameField>
        <displayFormat>Freight-{0000}</displayFormat>
        <label>Freight Table Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Freights table</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>