force-app/main/default/objects/Freight__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Wich city is it from</description>
    <inlineHelpText>Choose a city</inlineHelpText>
    <label>City</label>
    <referenceTo>City__c</referenceTo>
    <relationshipLabel>Freights table</relationshipLabel>
    <relationshipName>Freights_table</relationshipName>
    <type>Lookup</type>
</CustomField>