force-app/main/default/objects/Freight__c/fields/CostFreight__c.field-meta.xml
<CustomField>
    <fullName>CostFreight__c</fullName>
    <description>How much will cost</description>
    <inlineHelpText>write how much it will cost</inlineHelpText>
    <label>Cost Freight</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>