force-app/main/default/objects/Freight__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Wich country is it from</description>
    <inlineHelpText>Choose a Country</inlineHelpText>
    <label>Country</label>
    <referenceTo>Country__c</referenceTo>
    <relationshipLabel>Freights table</relationshipLabel>
    <relationshipName>Freights_table</relationshipName>
    <type>Lookup</type>
</CustomField>