force-app/main/default/objects/Freight__c/fields/DestinationState__c.field-meta.xml
<CustomField>
    <fullName>DestinationState__c</fullName>
    <description>Where is the destiny state</description>
    <inlineHelpText>choose on the picklist</inlineHelpText>
    <label>Destination State</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Destiny_State</valueSetName>
    </valueSet>
</CustomField>