force-app/main/default/objects/Freight__c/fields/DistributionCenter__c.field-meta.xml
<CustomField>
    <fullName>DistributionCenter__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Freight Distribution Center</description>
    <inlineHelpText>Choose a Distribution Center</inlineHelpText>
    <label>Distribution Center</label>
    <referenceTo>DistributionCenter__c</referenceTo>
    <relationshipLabel>Freights table</relationshipLabel>
    <relationshipName>Freights_table</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>