force-app/main/default/objects/Freight__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Freight product</description>
    <inlineHelpText>Choose a Product</inlineHelpText>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Freights table</relationshipLabel>
    <relationshipName>Freights_table</relationshipName>
    <type>Lookup</type>
</CustomField>