force-app/main/default/objects/Freight__c/fields/Product_Hierarchy__c.field-meta.xml
<CustomField>
    <fullName>Product_Hierarchy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup for Product Hierarchy</description>
    <inlineHelpText>Choose a Product Hierarchy</inlineHelpText>
    <label>Product Hierarchy</label>
    <referenceTo>ProductHierarchy__c</referenceTo>
    <relationshipLabel>Freights table</relationshipLabel>
    <relationshipName>Freights_table</relationshipName>
    <type>Lookup</type>
</CustomField>