force-app/main/default/objects/Freight__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The state of it</description>
    <inlineHelpText>Choose a state</inlineHelpText>
    <label>State</label>
    <referenceTo>State__c</referenceTo>
    <relationshipLabel>Freights table</relationshipLabel>
    <relationshipName>Freights_table</relationshipName>
    <type>Lookup</type>
</CustomField>