force-app/main/default/objects/Freight__c/fields/StateOrigin__c.field-meta.xml
<CustomField>
    <fullName>StateOrigin__c</fullName>
    <description>The state of origin</description>
    <inlineHelpText>choose on the picklist the state</inlineHelpText>
    <label>State Origin</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Origin_State</valueSetName>
    </valueSet>
</CustomField>