force-app/main/default/objects/Freight__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <description>How much is the value of the Freight</description>
    <inlineHelpText>Write the value</inlineHelpText>
    <label>Value</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>