force-app/main/default/objects/Freight__c/listViews/Freight_Origin_Rio_de_Janeiro.listView-meta.xml
<ListView>
    <fullName>Freight_Origin_Rio_de_Janeiro</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>Freight Origin Rio de Janeiro</label>
</ListView>