force-app/main/default/objects/Freight__c/listViews/Origin_Fre.listView-meta.xml
<ListView>
    <fullName>Origin_Fre</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>StateOrigin__c</field>
        <operation>equals</operation>
        <value>SP</value>
    </filters>
    <label>Freight Origin São Paulo</label>
</ListView>